Project-25-Deploying-Packaging-Applications-into-Kubernetes-Helm/manifests/artifactory-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artifactory-ingress
  namespace: tools
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
  labels:
    name: artifactory
spec:
  ingressClassName: nginx
  rules:
    - host: tooling.artifactory.lydiahnganga.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: artifactory-artifactory-nginx
                port:
                  number: 80
